Squash and merge